updates to view download counts by ip address